# BattleCity

./: .gitignore  AI.cpp  AI.h  AbstractScene.cpp  AbstractScene.h  CMakeCache.txt  CMakeLists.txt  Client.cpp  Client.h  Constants.h  Controller.cpp  Controller.h  Doxyfile  DrawScene.cpp  DrawScene.h  GameOver.h  Goals  Object.cpp  Object.h  ObjectScene.cpp  ObjectScene.h  Objects.h  Posts.cpp  Posts.h  README.md  Server.cpp  Server.h  ThreadsShell.h  a.out  a.out~Добавленна проверка на видимость у ИИ.  main.cpp  makefile  map.h  menu.cpp  menu.h
cmake/: BattleCity  CMakeCache.txt  Makefile  cmake_install.cmake
levels/: 1.txt  2.txt  3.txt  4.txt  5.txt  p.txt  template.txt
sources/: a.out  graphic  graphic.cpp  input.cpp  main  main.cpp  makefile
Записка/: Goals.txt  Таблица функций.xlsx
Текстуры/: Без имени-1.psd  Без имени-2.psd
